base64 encoding for scripts